<resources>
    <string name="app_name">Kotlin_Series</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash">Splash</string>
    <string name="logo">Burger</string>
    <string name="name">Burger Point</string>
    <string name="required">This field is required</string>
    <string name="email">Enter your email</string>
    <string name="email_hint">Email</string>
    <string name="password">Enter your Password</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login to Burger Joint</string>
    <string name="button_text">Login</string>
    <string name="login_button_1">Logging in</string>
    <string name="submit">Submit</string>
    <string name="auth">You are authorized</string>
    <string name="wrong">Wrong Details</string>
    <string name="required_is_field">All fields Required</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="account">My Account</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome to Burger Joint</string>
    <string name="make_order">Make your order</string>
    <string name="scroll">scroll</string>
    <string name="veggie">Veggie Burger - UGX 6500</string>
    <string name="veggie_off">Veggie Burger - UGX 5500</string>
    <string name="cheese_off">Cheese Burger - UGX 3500</string>
    <string name="order_veggie">Order</string>
    <string name="order_ham">Order</string>
    <string name="ham">Ham Burger - UGX 7100</string>
    <string name="all_orders">My orders</string>
    <string name="created">just now</string>
    <string name="my_account">My Account</string>
    <string name="recent">Recent Activity</string>
    <string name="search">Search</string>
    <string name="promotions">Promotions</string>
    <string name="location">Delivered to:</string>
    <string name="my_location">21 street, Komamboga - kisa…</string>
    <string name="off">-50%</string>
    <string name="edit">Edit</string>
    <string name="country_name">Country Name</string>
    <string name="description">Description</string>
    <string name="item">item</string>
</resources>